--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="media.css" />
   </head>
   <body>
     <header>
@@ -19,25 +20,149 @@
 
     <nav>
       <ul>
-        <li><a href="https://globo.com">g1</a></li>
-        <li><a href="https://globo.com">o globo</a></li>
-        <li><a href="https://globo.com">valor</a></li>
-        <li><a href="https://globo.com">ge</a></li>
-        <li><a href="https://globo.com">cartola</a></li>
-        <li><a href="https://globo.com">globoplay</a></li>
-        <li><a href="https://globo.com">dropz</a></li>
-        <li><a href="https://globo.com">gshow</a></li>
-        <li><a href="https://globo.com">quem</a></li>
-        <li><a href="https://globo.com">receitas</a></li>
+        <li><a href="https://globo.com" target="_blank">g1</a></li>
+        <li><a href="https://globo.com" target="_blank">o globo</a></li>
+        <li><a href="https://globo.com" target="_blank">valor</a></li>
+        <li><a href="https://globo.com" target="_blank">ge</a></li>
+        <li><a href="https://globo.com" target="_blank">cartola</a></li>
+        <li><a href="https://globo.com" target="_blank">globoplay</a></li>
+        <li><a href="https://globo.com" target="_blank">dropz</a></li>
+        <li><a href="https://globo.com" target="_blank">gshow</a></li>
+        <li><a href="https://globo.com" target="_blank">quem</a></li>
+        <li><a href="https://globo.com" target="_blank">receitas</a></li>
       </ul>
 
       <ul class="mobile">
-        <li><a href="https://globo.com">g1</a></li>
-        <li><a href="https://globo.com">ge</a></li>
-        <li><a href="https://globo.com">gshow</a></li>
-        <li><a href="https://globo.com">tech</a></li>
-        <li><a href="https://globo.com">vídeos</a></li>
+        <li><a href="https://globo.com" target="_blank">g1</a></li>
+        <li><a href="https://globo.com" target="_blank">ge</a></li>
+        <li><a href="https://globo.com" target="_blank">gshow</a></li>
+        <li><a href="https://globo.com" target="_blank">tech</a></li>
+        <li><a href="https://globo.com" target="_blank">vídeos</a></li>
       </ul>
     </nav>
+    <main>
+      <div class="g1">
+        <div class="hero">
+          <h1>
+            <a href="https://globo.com" target="_blank">
+              Vacinados entrarão nos EUA sem quarentena a partir de 8 de novembro
+            </a>
+          </h1>
+          <p>
+            <a href="https://globo.com" target="_blank">
+              Ministros ‘lavam as mãos’ sobre Bolsonaro não se vacinar, relata blog
+            </a>
+          </p>
+          <p>
+            <a href="https://globo.com" target="_blank">
+              Bandeiras em frente ao Congresso lembram 600 mil brasileiros mortos
+            </a>
+          </p>
+        </div>
+        <div class="news border">
+          <article>
+            <a href="https://globo.com" target="_blank">
+              <img src="images/alem-do-presidente.jpeg" alt="Além do presidente" />
+              <h2>Além do presidente</h2>
+              <h3>CPI deve pedir indiciamento de filhos de Bolsonaro</h3>
+              <p>A evangélicos, Bolsonaro diz ‘chorar sozinho em casa’</p>
+            </a>
+          </article>
+
+          <article>
+            <a href="https://globo.com" target="_blank">
+              <img src="images/crimes-na-fronteira.jpeg" alt="Crimes na fronteira" />
+              <h2>Crimes na fronteira</h2>
+              <h3>Triângulo amoroso vira chave em linha de investigação</h3>
+              <p>1ª de 7 mortes entre Brasil e Paraguai faz 1 semana</p>
+            </a>
+          </article>
+
+          <article>
+            <a href="https://globo.com" target="_blank">
+              <img src="images/reino-unido.jpeg" alt="Reino Unido" />
+              <h2>Reino Unido</h2>
+              <h3>Parlamentar inglês é esfaqueado e morto em igreja</h3>
+              <p>Homem de 25 anos foi preso no local, diz polícia</p>
+            </a>
+          </article>
+        </div>
+        <div class="news">
+          <article>
+            <a href="https://globo.com" target="_blank">
+              <h2>Sabatina de Mendonça</h2>
+              <h3>PGR é consultada sobre investigação contra Alcolumbre</h3>
+              <p>Aliados dizem que situação de Alcolumbre ‘está feia’</p>
+            </a>
+          </article>
+          <article>
+            <a href="https://globo.com" target="_blank">
+              <h2>Negócio de R$ 5,2 bi</h2>
+              <h3>Pão de Açúcar vende 71 pontos do Extra para o Assaí</h3>
+              <p>Lembre fusões e aquisições bilionárias recentes no país</p>
+            </a>
+          </article>
+
+          <article>
+            <a href="https://globo.com" target="_blank">
+              <h2>Elo com caminhoneiros</h2>
+              <h3>Podcast: ministro liga empresários a atos de 7/9; ouça</h3>
+              <p>Neto de Jango critica veto de Bolsonaro a tributo</p>
+            </a>
+          </article>
+        </div>
+      </div>
+
+      <div class="ge">
+        <article>
+          <a href="https://globo.com" target="_blank">
+            <img src="images/espiao-estatistico.jpeg" alt="Espião estatístico" />
+            <h2>Espião estatístico</h2>
+            <h3>Classificação do returno tem Palmeiras em último; veja as posições</h3>
+            <p>Crespo almoça com diretoria e deve se despedir no CT</p>
+          </a>
+        </article>
+        <article>
+          <a href="https://globo.com" target="_blank">
+            <img src="images/greve-segue-na-raposa.jpeg" alt="Greve segue na Raposa" />
+            <h2>Greve segue na Raposa</h2>
+            <h3>Cruzeiro não viabiliza recurso para quitar atrasados</h3>
+          </a>
+        </article>
+        <article>
+          <a href="https://globo.com" target="_blank">
+            <img src="images/campeonato-frances.jpeg" alt="Campeonato francês" />
+            <h2>Campeonato francês</h2>
+            <h3>Desfalcado, PSG recebe o Angers, 4º colocado</h3>
+          </a>
+        </article>
+      </div>
+      <div class="gshow">
+        <article>
+          <a href="https://globo.com" target="_blank">
+            <img src="images/ferias-e-jh.jpeg" alt="Férias e JH" />
+            <h2>Férias e JH</h2>
+            <h3>César Tralli se emociona na despedida do SP1</h3>
+          </a>
+        </article>
+        <article>
+          <a href="https://globo.com" target="_blank">
+            <img src="images/verdades-secretas-2.jpeg" alt="Verdades Secretas 2" />
+            <h2>Verdades Secretas 2</h2>
+            <h3>Angel cruza a passarela poderosa; reveja desfiles</h3>
+            <p>Blanche terá dois relacionamentos</p>
+            <p>Gabriel viverá sadomasoquista</p>
+          </a>
+        </article>
+        <article>
+          <a href="https://globo.com" target="_blank">
+            <img src="images/nos-tempos-do-imperador.jpeg" alt="Nos Tempos do Imperador" />
+            <h2>Nos Tempos do Imperador</h2>
+            <h3>Lota vai cair em golpe</h3>
+            <p>Teresa toma decisão radical</p>
+          </a>
+        </article>
+      </div>
+    </main>
   </body>
 </html>
