--- a/index.html
+++ b/index.html
@@ -62,27 +62,33 @@
         <div class="news border">
           <article>
             <a href="https://globo.com" target="_blank">
+              <div class="wrapper-news">
               <img src="images/alem-do-presidente.jpeg" alt="Além do presidente" />
               <h2>Além do presidente</h2>
               <h3>CPI deve pedir indiciamento de filhos de Bolsonaro</h3>
+              </div>
               <p>A evangélicos, Bolsonaro diz ‘chorar sozinho em casa’</p>
             </a>
           </article>
 
           <article>
             <a href="https://globo.com" target="_blank">
+              <div class="wrapper-news">
               <img src="images/crimes-na-fronteira.jpeg" alt="Crimes na fronteira" />
               <h2>Crimes na fronteira</h2>
               <h3>Triângulo amoroso vira chave em linha de investigação</h3>
+              </div>
               <p>1ª de 7 mortes entre Brasil e Paraguai faz 1 semana</p>
             </a>
           </article>
 
           <article>
             <a href="https://globo.com" target="_blank">
+              <div class="wrapper-news">
               <img src="images/reino-unido.jpeg" alt="Reino Unido" />
               <h2>Reino Unido</h2>
               <h3>Parlamentar inglês é esfaqueado e morto em igreja</h3>
+              </div>
               <p>Homem de 25 anos foi preso no local, diz polícia</p>
             </a>
           </article>
@@ -116,53 +122,64 @@
       <div class="ge">
         <article>
           <a href="https://globo.com" target="_blank">
-            <img src="images/espiao-estatistico.jpeg" alt="Espião estatístico" />
-            <h2>Espião estatístico</h2>
-            <h3>Classificação do returno tem Palmeiras em último; veja as posições</h3>
+            <div class="wrapper-news">
+              <img src="images/espiao-estatistico.jpeg" alt="Espião estatístico" />
+              <h2>Espião estatístico</h2>
+              <h3>Classificação do returno tem Palmeiras em último; veja as posições</h3>
+            </div>
             <p>Crespo almoça com diretoria e deve se despedir no CT</p>
           </a>
         </article>
 
         <article>
           <a href="https://globo.com" target="_blank">
-            <img src="images/greve-segue-na-raposa.jpeg" alt="Greve segue na Raposa" />
-            <h2>Greve segue na Raposa</h2>
-            <h3>Cruzeiro não viabiliza recurso para quitar atrasados</h3>
+            <div class="wrapper-news">
+              <img src="images/greve-segue-na-raposa.jpeg" alt="Greve segue na Raposa" />
+              <h2>Greve segue na Raposa</h2>
+              <h3>Cruzeiro não viabiliza recurso para quitar atrasados</h3>
+            </div>
           </a>
         </article>
 
         <article>
           <a href="https://globo.com" target="_blank">
-            <img src="images/campeonato-frances.jpeg" alt="Campeonato francês" />
-            <h2>Campeonato francês</h2>
-            <h3>Desfalcado, PSG recebe o Angers, 4º colocado</h3>
+            <div class="wrapper-news">
+              <img src="images/campeonato-frances.jpeg" alt="Campeonato francês" />
+              <h2>Campeonato francês</h2>
+              <h3>Desfalcado, PSG recebe o Angers, 4º colocado</h3>
+            </div>
           </a>
         </article>
       </div>
       <div class="gshow">
         <article>
           <a href="https://globo.com" target="_blank">
-            <img src="images/ferias-e-jh.jpeg" alt="Férias e JH" />
-            <h2>Férias e JH</h2>
-            <h3>César Tralli se emociona na despedida do SP1</h3>
+            <div class="wrapper-news">
+              <img src="images/ferias-e-jh.jpeg" alt="Férias e JH" />
+              <h2>Férias e JH</h2>
+              <h3>César Tralli se emociona na despedida do SP1</h3>
+            </div>
           </a>
         </article>
 
         <article>
           <a href="https://globo.com" target="_blank">
-            <img src="images/verdades-secretas-2.jpeg" alt="Verdades Secretas 2" />
-            <h2>Verdades Secretas 2</h2>
-            <h3>Angel cruza a passarela poderosa; reveja desfiles</h3>
+            <div class="wrapper-news">
+              <img src="images/verdades-secretas-2.jpeg" alt="Verdades Secretas 2" />
+              <h2>Verdades Secretas 2</h2>
+              <h3>Angel cruza a passarela poderosa; reveja desfiles</h3>
+            </div>
             <p>Blanche terá dois relacionamentos</p>
             <p>Gabriel viverá sadomasoquista</p>
           </a>
         </article>
-
         <article>
           <a href="https://globo.com" target="_blank">
-            <img src="images/nos-tempos-do-imperador.jpeg" alt="Nos Tempos do Imperador" />
-            <h2>Nos Tempos do Imperador</h2>
-            <h3>Lota vai cair em golpe</h3>
+            <div class="wrapper-news">
+              <img src="images/nos-tempos-do-imperador.jpeg" alt="Nos Tempos do Imperador" />
+              <h2>Nos Tempos do Imperador</h2>
+              <h3>Lota vai cair em golpe</h3>
+            </div>
             <p>Teresa toma decisão radical</p>
           </a>
         </article>
