--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>globo.com</title>
 
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="media.css" />
+    <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="assets/css/reset.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/media.css" />
   </head>
   <body>
     <header>
       <picture>
-        <source media="(max-width: 375px)" srcset="images/logo-mobile.svg" />
-        <img src="images/logo-desktop.svg" alt="globo.com logo" />
+        <source media="(max-width: 375px)" srcset="assets/images/logo-mobile.svg" />
+        <img src="assets/images/logo-desktop.svg" alt="globo.com logo" />
       </picture>
     </header>
 
@@ -63,9 +63,9 @@
           <article>
             <a href="https://globo.com" target="_blank">
               <div class="wrapper-news">
-              <img src="images/alem-do-presidente.jpeg" alt="Além do presidente" />
-              <h2>Além do presidente</h2>
-              <h3>CPI deve pedir indiciamento de filhos de Bolsonaro</h3>
+                <img src="assets/images/alem-do-presidente.jpeg" alt="Além do presidente" />
+                <h2>Além do presidente</h2>
+                <h3>CPI deve pedir indiciamento de filhos de Bolsonaro</h3>
               </div>
               <p>A evangélicos, Bolsonaro diz ‘chorar sozinho em casa’</p>
             </a>
@@ -74,9 +74,9 @@
           <article>
             <a href="https://globo.com" target="_blank">
               <div class="wrapper-news">
-              <img src="images/crimes-na-fronteira.jpeg" alt="Crimes na fronteira" />
-              <h2>Crimes na fronteira</h2>
-              <h3>Triângulo amoroso vira chave em linha de investigação</h3>
+                <img src="assets/images/crimes-na-fronteira.jpeg" alt="Crimes na fronteira" />
+                <h2>Crimes na fronteira</h2>
+                <h3>Triângulo amoroso vira chave em linha de investigação</h3>
               </div>
               <p>1ª de 7 mortes entre Brasil e Paraguai faz 1 semana</p>
             </a>
@@ -85,9 +85,9 @@
           <article>
             <a href="https://globo.com" target="_blank">
               <div class="wrapper-news">
-              <img src="images/reino-unido.jpeg" alt="Reino Unido" />
-              <h2>Reino Unido</h2>
-              <h3>Parlamentar inglês é esfaqueado e morto em igreja</h3>
+                <img src="assets/images/reino-unido.jpeg" alt="Reino Unido" />
+                <h2>Reino Unido</h2>
+                <h3>Parlamentar inglês é esfaqueado e morto em igreja</h3>
               </div>
               <p>Homem de 25 anos foi preso no local, diz polícia</p>
             </a>
@@ -123,7 +123,7 @@
         <article>
           <a href="https://globo.com" target="_blank">
             <div class="wrapper-news">
-              <img src="images/espiao-estatistico.jpeg" alt="Espião estatístico" />
+              <img src="assets/images/espiao-estatistico.jpeg" alt="Espião estatístico" />
               <h2>Espião estatístico</h2>
               <h3>Classificação do returno tem Palmeiras em último; veja as posições</h3>
             </div>
@@ -134,7 +134,7 @@
         <article>
           <a href="https://globo.com" target="_blank">
             <div class="wrapper-news">
-              <img src="images/greve-segue-na-raposa.jpeg" alt="Greve segue na Raposa" />
+              <img src="assets/images/greve-segue-na-raposa.jpeg" alt="Greve segue na Raposa" />
               <h2>Greve segue na Raposa</h2>
               <h3>Cruzeiro não viabiliza recurso para quitar atrasados</h3>
             </div>
@@ -144,7 +144,7 @@
         <article>
           <a href="https://globo.com" target="_blank">
             <div class="wrapper-news">
-              <img src="images/campeonato-frances.jpeg" alt="Campeonato francês" />
+              <img src="assets/images/campeonato-frances.jpeg" alt="Campeonato francês" />
               <h2>Campeonato francês</h2>
               <h3>Desfalcado, PSG recebe o Angers, 4º colocado</h3>
             </div>
@@ -155,7 +155,7 @@
         <article>
           <a href="https://globo.com" target="_blank">
             <div class="wrapper-news">
-              <img src="images/ferias-e-jh.jpeg" alt="Férias e JH" />
+              <img src="assets/images/ferias-e-jh.jpeg" alt="Férias e JH" />
               <h2>Férias e JH</h2>
               <h3>César Tralli se emociona na despedida do SP1</h3>
             </div>
@@ -165,7 +165,7 @@
         <article>
           <a href="https://globo.com" target="_blank">
             <div class="wrapper-news">
-              <img src="images/verdades-secretas-2.jpeg" alt="Verdades Secretas 2" />
+              <img src="assets/images/verdades-secretas-2.jpeg" alt="Verdades Secretas 2" />
               <h2>Verdades Secretas 2</h2>
               <h3>Angel cruza a passarela poderosa; reveja desfiles</h3>
             </div>
@@ -176,7 +176,7 @@
         <article>
           <a href="https://globo.com" target="_blank">
             <div class="wrapper-news">
-              <img src="images/nos-tempos-do-imperador.jpeg" alt="Nos Tempos do Imperador" />
+              <img src="assets/images/nos-tempos-do-imperador.jpeg" alt="Nos Tempos do Imperador" />
               <h2>Nos Tempos do Imperador</h2>
               <h3>Lota vai cair em golpe</h3>
             </div>
